Removed some dead meat in terms of unused modules

--- a/src/notebooks/specim_preprocessing.ipynb
+++ b/src/notebooks/specim_preprocessing.ipynb
@@ -767,7 +767,7 @@
    ],
    "source": [
     "# Define h5 file name\n",
-    "H5_DIR = OUT_DIR + 'Input/H5/'\n",
+    "h5_folder = OUT_DIR + 'Input/H5/'\n",
     "# Every 1000 lines take up 0.85 GB. Therefore it could make sense to partition things that are larger than 2000 lines\n",
     "TRANSECT_CHUNK_SIZE = 2000\n",
     "\n",
@@ -795,7 +795,7 @@
     "        specim_object.hsi_timestamps = hsi_timestamps_total[chunk_start_idx:chunk_stop_idx]\n",
     "\n",
     "        # Possible to name files with <PREFIX>_<time_start>_<Transect#>_<Chunk#>.h5\n",
-    "        h5_filename = H5_DIR + MISSION_NAME_PREFIX + '_transectnr_' + str(int(transect_number)) + '_chunknr_' + str(int(chunk_number)) + '.h5'\n",
+    "        h5_filename = h5_folder + MISSION_NAME_PREFIX + '_transectnr_' + str(int(transect_number)) + '_chunknr_' + str(int(chunk_number)) + '.h5'\n",
     "\n",
     "        specim_object_2_h5_file(h5_filename=h5_filename, h5_tree_dict=h5_dict_write, specim_object=specim_object)"
    ]
