--- a/src/notebooks/uhi_beast.ipynb
+++ b/src/notebooks/uhi_beast.ipynb
@@ -281,7 +281,7 @@
       "  Latitude\n",
       "  DataFolder\n",
       "  PlotFolder\n",
-      "  RamsesCalibFolder\n",
+      "  Ramsescalib_folder\n",
       "  VerticalProfiles\n",
       "    Amount\n",
       "    Amplitude\n",
@@ -667,11 +667,11 @@
     "import spectral as sp\n",
     "%matplotlib qt\n",
     "\n",
-    "H5_DIR = MISSION_PATH + '/Input/H5/'\n",
+    "h5_folder = MISSION_PATH + '/Input/H5/'\n",
     "H5_PATTERN = '*.h5'\n",
     "\n",
     "\n",
-    "search_path_h5 = os.path.normpath(os.path.join(H5_DIR, H5_PATTERN))\n",
+    "search_path_h5 = os.path.normpath(os.path.join(h5_folder, H5_PATTERN))\n",
     "H5_FILE_PATHS = glob.glob(search_path_h5)\n",
     "\n",
     "number_of_h5_files = len(H5_FILE_PATHS)\n",
