Fix footprint masking av vehicle rotating

--- a/gref4hsi/notebooks/specim_preprocessing.ipynb
+++ b/gref4hsi/notebooks/specim_preprocessing.ipynb
@@ -53,24 +53,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a configuration object for the processing."
+    "### The data recorded for each Specim mission (in mission_dir) has the following necessary files for processing.\n",
+    "```\n",
+    "mission_dir\n",
+    "├── capture\n",
+    "    ├── <capture_name>.hdr\n",
+    "    ├── <capture_name>.nav\n",
+    "    └── <capture_name>.raw\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In addition the user must specify the following lab calibration directory (is the same for all missions):\n",
+    "```\n",
+    "lab_calibrations_dir/\n",
+    "    FOV_AFX10_SN1120112_20210324_1b.txt\n",
+    "    FOV_AFX10_SN1120112_20210324_2b.txt\n",
+    "    Radiometric_1x1.cal\n",
+    "    Radiometric_1x1.hdr\n",
+    "    Radiometric_1x2.cal\n",
+    "    Radiometric_1x2.hdr\n",
+    "    Radiometric_2x1.cal\n",
+    "    Radiometric_2x1.hdr\n",
+    "    Radiometric_2x2.cal\n",
+    "    Radiometric_2x2.hdr\n",
+    "    Radiometric_4x1.cal\n",
+    "    Radiometric_4x1.hdr\n",
+    "    Radiometric_4x2.cal\n",
+    "    Radiometric_4x2.hdr\n",
+    "    Radiometric_8x1.cal\n",
+    "    Radiometric_8x1.hdr\n",
+    "    Radiometric_8x2.cal\n",
+    "    Radiometric_8x2.hdr\n",
+    "    wlcal1b_fwhm.wls\n",
+    "    wlcal1b_fx.wls\n",
+    "    wlcal2b_fwhm.wls\n",
+    "    wlcal2b_fx.wls\n",
+    "    wlcal4b_fwhm.wls\n",
+    "    wlcal4b_fx.wls\n",
+    "    wlcal8b_fwhm.wls\n",
+    "    wlcal8b_fx.wls\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# TODO: The config_file should be better explained, and generated based on user settings. Dictionary could be good alternative\n",
-    "config_file = OUT_DIR + 'configuration.ini'\n",
-    "\n",
-    "# Set the data directory for the mission (locally where the data is stored)\n",
-    "prepend_data_dir_to_relative_paths(config_path=config_file)\n",
-    "\n",
+    "T\n",
     "config = configparser.ConfigParser()\n",
     "config.read(config_file)\n",
     "\n",
