Make imports work for pip library

--- a/notebooks/specim_preprocessing.ipynb
+++ b/notebooks/specim_preprocessing.ipynb
@@ -34,7 +34,7 @@
     "    sys.path.append(module_path)\n",
     "\n",
     "from lib.specim_parsing_utils import Specim\n",
-    "from scripts.modulate_config import prepend_data_dir_to_relative_paths\n",
+    "from gref4hsi.scripts.modulate_config import prepend_data_dir_to_relative_paths\n",
     "\n",
     "MISSION_NAME_PREFIX = '2022-08-31-060000-Remoy-Specim' # I use UTC time to avoid any timezone BS\n",
     "\n",
