improved state of specim_process and flight_runner, still not functional

--- a/notebooks/flightrunner_specim.ipynb
+++ b/notebooks/flightrunner_specim.ipynb
@@ -60,19 +60,22 @@
    "execution_count": 3,
    "id": "c9f66eef-7fbd-4efd-9cbe-91007d1c6917",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Establish iterable parent directories"
+    "\n",
+    "\n",
+    "# Login to MinIO\n",
+    "minio_client = sb.storage.minio_login(\n",
+    "    user=SETTINGS.MINIO_ACCESS_ID, password=SETTINGS.MINIO_SECRET_KEY\n",
+    ")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "9fe9281e-4706-4e06-b944-dfd7c783d93d",
    "metadata": {},
    "outputs": [],
@@ -96,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing started: 2024-03-12 13:15:15.144997\n"
+      "Processing started: 2024-03-12 14:20:22.042685\n"
      ]
     }
    ],
@@ -149,41 +152,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "aec010b3-a209-4291-b465-cb4f295b6e85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/Lab_Calibrations')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Establish the ancillary data paths\n"
+    "# Establish the ancillary data paths\n",
+    "from pathlib import Path\n",
+    "\n",
+    "geoid_path = Path('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/geoids/no_kv_HREF2018A_NN2000_EUREF89.tif')\n",
+    "config_template_path ='/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim.ini'\n",
+    "lab_calibration_path = Path('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/Lab_Calibrations')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bf2cf748-2313-49e9-b535-9f1b56abc48e",
+   "execution_count": 30,
+   "id": "c90368c8-8fea-4ca9-bab2-ad9ecd1bed56",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "################\n",
-      "Processing: slettvik_seaside-straumen_202402191358_ntnu_hyperspectral_74m\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "main() missing 2 required positional arguments: 'EPSG_CODE' and 'RESOLUTION_ORTHOMOSAIC'",
+     "ename": "OSError",
+     "evalue": "Could not identify destination '/home/notebook/cogs/Lab_Calibrations_Copy' on MinIO.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m################\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mProcessing: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmission_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      7\u001b[0m conf_yaml \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(mission_fold, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconfig.seabee.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[43mspecim_process\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconf_yaml\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: main() missing 2 required positional arguments: 'EPSG_CODE' and 'RESOLUTION_ORTHOMOSAIC'"
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [30], line 23\u001b[0m\n\u001b[1;32m      9\u001b[0m lab_calibration_path_local \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(temp_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlab-calibration\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Example copy from/to MINIO works\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m#sb.storage.copy_file('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim.ini', \u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m#                      '/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim_copy.ini', minio_client, overwrite=False)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m#sb.storage.copy_file('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim.ini', \u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m#                     '/home/notebook/cogs/configuration_specim_copy.ini', minio_client, overwrite=False)\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[43msb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstorage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy_folder\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/Lab_Calibrations\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m                       \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/home/notebook/cogs/Lab_Calibrations_Copy\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mminio_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moverwrite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m#specim_process.main(str(config_yaml), str(specim_mission_folder), geoid_path, config_template_path, lab_calibration_path)\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/seabeepy/storage.py:179\u001b[0m, in \u001b[0;36mcopy_folder\u001b[0;34m(src_fold, dst_fold, client, overwrite, containing_folder)\u001b[0m\n\u001b[1;32m    176\u001b[0m dst_bucket, dst_name \u001b[38;5;241m=\u001b[39m _jhub_path_to_minio(dst_fold)\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dst_bucket \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 179\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not identify destination \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdst_fold\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m on MinIO.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    181\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m containing_folder:\n\u001b[1;32m    182\u001b[0m     dst_fold \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dst_bucket, dst_name, os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mbasename(src_fold))\n",
+      "\u001b[0;31mOSError\u001b[0m: Could not identify destination '/home/notebook/cogs/Lab_Calibrations_Copy' on MinIO."
      ]
     }
    ],
+   "source": [
+    "# Establish the ancillary data paths\n",
+    "import yaml\n",
+    "import specim_process\n",
+    "\n",
+    "specim_mission_folder = mission_list[0]\n",
+    "\n",
+    "config_yaml = os.path.join(specim_mission_folder, \"config.seabee.yaml\")\n",
+    "\n",
+    "lab_calibration_path_local = os.path.join(temp_dir, \"lab-calibration\")\n",
+    "\n",
+    "\n",
+    "# Example copy from/to MINIO works\n",
+    "#sb.storage.copy_file('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim.ini', \n",
+    "#                      '/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim_copy.ini', minio_client, overwrite=False)\n",
+    "#sb.storage.copy_folder('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/Lab_Calibrations', \n",
+    "#                       '/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/Lab_Calibrations_Copy', minio_client, overwrite=False)\n",
+    "\n",
+    "\n",
+    "# Example copying from MINIO to local WS\n",
+    "#sb.storage.copy_file('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/configuration_specim.ini', \n",
+    "#                     '/home/notebook/cogs/configuration_specim_copy.ini', minio_client, overwrite=False)\n",
+    "\n",
+    "sb.storage.copy_folder('/home/notebook/shared-seabee-ns9879k/ntnu/specim_processing_data/Lab_Calibrations', \n",
+    "                       '/home/notebook/cogs/Lab_Calibrations_Copy', minio_client, overwrite=False)\n",
+    "\n",
+    "\n",
+    "#specim_process.main(str(config_yaml), str(specim_mission_folder), geoid_path, config_template_path, lab_calibration_path)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8caf7e21-0db6-4a84-9169-a95ba522f034",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "Could not identify destination '/home/notebook/config_specim.ini' on MinIO.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [17], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m local_copy_config \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/notebook/config_specim.ini\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Simple example:\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[43msb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstorage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig_template_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlocal_copy_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mminio_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moverwrite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/seabeepy/storage.py:81\u001b[0m, in \u001b[0;36mcopy_file\u001b[0;34m(src_path, dst_path, client, overwrite)\u001b[0m\n\u001b[1;32m     78\u001b[0m dst_bucket, dst_name \u001b[38;5;241m=\u001b[39m _jhub_path_to_minio(dst_path)\n\u001b[1;32m     80\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dst_bucket \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not identify destination \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdst_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m on MinIO.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     83\u001b[0m dst_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dst_bucket, dst_name)\n\u001b[1;32m     84\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m client\u001b[38;5;241m.\u001b[39mexists(dst_path) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m overwrite:\n",
+      "\u001b[0;31mOSError\u001b[0m: Could not identify destination '/home/notebook/config_specim.ini' on MinIO."
+     ]
+    }
+   ],
+   "source": [
+    "# We need tu unveil how to read write the data to and from storage\n",
+    "\n",
+    "local_copy_config = os.path.join('/home/notebook/config_specim.ini')\n",
+    "\n",
+    "\n",
+    "# Simple example:\n",
+    "sb.storage.copy_file(config_template_path, local_copy_config, minio_client, overwrite=False)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf2cf748-2313-49e9-b535-9f1b56abc48e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import specim_process\n",
     "\n",
